[tool.poetry]
name = "phb-bot"
version = "0.1.0"
description = "Chat Bot to answer questions about DND 5e based on the PHB"
authors = ["Brandon Kamaka <Bkamaka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
langchain-community = "^0.0.11"
openai = "^1.7.0"
chromadb = "^0.4.22"
tiktoken = "^0.5.2"
pypdf = "^3.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
